monticore-grammar/src/test/resources/de/monticore/javalight/cocos/invalid/A0802/A0802.java
/* (c) https://github.com/MontiCore/monticore */
private abstract void a(){}
